v2, time card layout break Fixed

--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ body {
 .container {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 2.5rem;
 
     width: 337.5px;
@@ -54,6 +55,7 @@ body {
     background-color: var(--dark-blue);
     border-radius: 1.5rem;
     font-weight: 400;
+    height: 100%;
 }
 
 .user__content {
